Figured out multiple instances

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="group">
-            <div class="group-title">Artboard Mouse Coords</div>
+            <div class="group-title">Artboard 0 Mouse Coords</div>
             <div class="value-pair">
                 <span>max: <span id="max-value">0</span></span>
                 <span>may: <span id="may-value">0</span></span>
