--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
 
     <div id="debug-string">
-        Debug Properties: <span id="debug-string-content"></span>
+        <b>Debug:</b> <span id="debug-string-content"></span>
     </div>
 
     <canvas id="gameCanvas"></canvas>
