perf test 10 elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="src/styles.css" />
     <style>
         #overlay-controls {
+            display : none;
             position: fixed;
             top: 10px;
             left: 10px;
@@ -30,6 +31,7 @@
             width: 50px;
         }
         #debug-values {
+            display : none;
             position: fixed;
             top: 10px;
             right: 10px;
@@ -117,7 +119,7 @@
     <div id="debug-string">
         <b>Debug:</b> <span id="debug-string-content"></span>
     </div>
-
+    <h1>Performance Test</h1>
     <canvas id="gameCanvas"></canvas>
     <script type="module" src="src/wip.ts"></script>
 </body>
