perf test with buttons

--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
     <div id="debug-string">
         <b>Debug:</b> <span id="debug-string-content"></span>
     </div>
-    <h1>Performance Test</h1>
+    <div>
+    <h1>Performance Test</h1><button id="btn">!!!ADD FIVE ANIMATED ELEMENTS!!!</button>
+</div>
     <canvas id="gameCanvas"></canvas>
     <script type="module" src="src/wip.ts"></script>
 </body>
