--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/styles.css" />
     <style>
-        #debug-string {
+        #debug {
             position: fixed;
             bottom: 10px;
             left: 10px;
@@ -22,11 +22,10 @@
     </style>
 </head>
 <body>
-    <div id="debug-string">
-        <b>Debug:</b> <span id="debug-string-content"></span>
+    <div id="debug">
+        <b>Debug:</b> <span id="debug-content"></span>
     </div>
-    <div>
-</div>
+
     <canvas id="gameCanvas"></canvas>
     <script type="module" src="src/Pegaso.ts"></script>
 </body>
