--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
         <b>Debug:</b> <span id="debug-content"></span>
     </div>
 
-    <div class="canvas-container">
-        <canvas id="gameCanvas"></canvas>
-        <div class="crosshair-h"></div>
-        <div class="crosshair-v"></div>
-    </div>
+    <canvas id="gameCanvas"></canvas>
    
-    <script type="module" src="src/Pegaso.ts"></script>
+    <script type="module" src="src/Tests.ts"></script>
 </body>
 </html>
