--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
     <canvas id="gameCanvas"></canvas>
    
-    <script type="module" src="src/Scene.ts"></script>
+    <script type="module" src="src/Tests.ts"></script>
 </body>
 </html>
