--- a/export/index.html
+++ b/export/index.html
@@ -12,6 +12,6 @@
 
     <canvas id="gameCanvas"></canvas>
    
-    <script type="module" src="src/Tests.ts"></script>
+    <script type="module" src="../src/Samples/Samples.ts"></script>
 </body>
 </html>
